# raise-and-rage

./: README.md
.github/workflows/: CI.yml
frontend/: .env.example  .eslintrc.js  .prettierrc.js  README.md  app.json  babel.config.cjs  cache.ts  package-lock.json  package.json  tailwind.config.js
frontend/api/profiles/: create.ts
frontend/api/room/: create.ts
frontend/api/rooms/: create.ts
frontend/app/: _layout.tsx
frontend/app/(auth)/: sign-in.tsx  sign-up.tsx
frontend/app/(base)/: _layout.tsx  create.tsx  index.tsx  lobby.tsx  splitwise.tsx
frontend/app/(base)/create/: options.tsx
frontend/app/(base)/rooms/: [roomCode].tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  play.tsx  settings.tsx
frontend/components/: Account.tsx  Auth.tsx  Collapsible.tsx
frontend/components/shared/: card-wrapper.tsx  protected-route.tsx
frontend/components/shared/auth/: AuthProvider.tsx  ProtectedLayout.tsx
frontend/components/ui/: IconSymbol.tsx  TabBarBackground.ios.tsx
frontend/constants/: game.ts
frontend/hooks/: useThemeColor.ts
frontend/utils/: client.ts  supabase.ts
frontend/utils/types/api/profiles/: create.ts
frontend/utils/types/api/room/: create.ts
frontend/utils/types/api/rooms/: create.ts
server/: README.md  pyproject.toml
server/app/api/: main.py  routes.py
server/app/controllers/: games.py  profiles.py  rooms.py
server/app/models/: games.py  profiles.py  rooms.py
server/app/services/: games.py  profiles.py  rooms.py
server/app/utils/: database.py
