[project]
name = "raise-and-rage"
version = "0.1.0"
description = ""
authors = [
    {name = "jinyang628",email = "chenjinyang4192@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "supabase (>=2.13.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
wrap_length = 100
multi_line_output = 3
profile = "black"
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
